--- a/style.css
+++ b/style.css
@@ -174,12 +174,12 @@ tool-btn:hover {
   font-weight: 500;
   font-size: 15px;
   margin: 0 0 5px;
-  color: #000000;
+  color: #6e6e6e;
 }
 .info p {
-  font-size: 15px;
+  font-size: 17px;
   font-family: 'simple', sans-serif;
-  color: #000000;
+  color: #6e6e6e;
   margin: 0 0 5px;
 }
 .span {
@@ -851,6 +851,7 @@ body.sheet-open{ overflow: hidden; }
   max-width: 600px;
   margin: 0 auto;
   font-family: 'simple', sans-serif;
+  color: #6e6e6e;
 }
 .content-store .cover{
   width: 100%;
@@ -871,6 +872,7 @@ body.sheet-open{ overflow: hidden; }
   overflow-wrap: break-word;
   margin-top: 10px;
   font-family: 'simple', sans-serif;
+  color: #6e6e6e;
 }
 body.dark .content-store p{
   color: #e6e6e6;
@@ -896,7 +898,7 @@ body.dark .content-store p{
   border-radius: 999px;
   background-color: #0099ff;
   font-size: 16px;
-  color: #fff;
+  color: #ffffff;
   border: none;
   margin: 18px 0 10px;
   font-family: 'simple', sans-serif;
@@ -926,12 +928,13 @@ body.dark .content-store p{
   font-family: 'simple', sans-serif;
   font-size: 24px;
   text-align: center;
-  color: #000000;
+  color: #6e6e6e;
 }
 @media (max-width: 480px){
   .text-tab3 p{
     font-size: 19px;
     font-family: 'simple', sans-serif;
+    color: #6e6e6e;
     
   }
   
@@ -946,13 +949,13 @@ body.dark .content-store p{
   border-collapse: collapse;
   font-family: 'simple', sans-serif;
   font-size: 15.5px;
-  background: #f9fafb;
+  background: #99dbff;
   border-radius: 14px;
   overflow: hidden;
 }
 
 .simple-info-table tr {
-  border-bottom: 1px solid #e5e7eb;
+  border-bottom: 1px solid #ffffff36;
   transition: background 0.2s ease;
 }
 
@@ -962,8 +965,8 @@ body.dark .content-store p{
 
 .simple-info-table td:first-child {
   width: 40%;
-  background: #f3f4f6;
-  color: #374151;
+  background: #42acf4;
+  color: #ffffff;
 }
 
 .simple-info-table td:last-child {
@@ -1175,7 +1178,7 @@ html.color-transition * {
   font-family: 'simple', sans-serif;
   font-size: 15.5px;
   line-height: 1.75;
-  color: #374151;
+  color: #6e6e6e;
 }
 
 .home-actions{
@@ -1389,7 +1392,7 @@ html.color-transition * {
   margin: 0 0 12px;
   font-family: 'SM Simple', sans-serif;
   font-size: 16px;
-  color: #000000;
+  color: #6e6e6e;
 }
 
 .home-tip{
@@ -1944,3 +1947,8 @@ body.dark .scroll-to-top {
 }
 
 
+/* All Right Reserved by SM Digital */
+/* Develop by SM Digital Team */
+/* Mr.Lan Khala (Owner) */
+/* Mr.Keo Sola */
+/* Mr.David Mario */
